add and run the functions to display and render buttons from array and new buttons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 placeholder="Type here"
               />
             </div>
-            <button type="submit" class="btn btn-info">Search</button>
+            <button type="submit" id="add-giphy" class="btn btn-info">
+              Add Giphy
+            </button>
           </form>
         </div>
 
