retrieve array for each giphy and begin function to display each giphy

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <div class="col-9 alert alert-info">
           <div id="giphy-view"></div>
+          <div id="giphy-display"></div>
 
           <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
           <script src="assets/js/app.js"></script>
