add styling to buttons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container-flex-column">
       <div class="row">
-        <div class="col-3">
+        <div class="col-md-3 col-sm-12">
           <h1>Giphy Search</h1>
           <p>Search for that special giphy.</p>
           <form>
@@ -35,7 +35,7 @@
           </form>
         </div>
 
-        <div class="col-9 alert alert-info">
+        <div class="col-md-9 col-sm-12 alert alert-info">
           <div id="giphy-view"></div>
           <div id="giphy-display"></div>
 
