set giphy display as a flex box and wrap it

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container-flex-column">
+    <div class="container-flex">
       <div class="row">
         <div class="col-md-3 col-sm-12">
           <h1>Giphy Search</h1>
@@ -37,7 +37,7 @@
 
         <div class="col-md-9 col-sm-12 alert alert-info">
           <div id="giphy-view"></div>
-          <div id="giphy-display"></div>
+          <div id="giphy-display" class="view-container"></div>
 
           <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
           <script src="assets/js/app.js"></script>
