--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="container-flex">
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-12">
           <h1>Giphy Search</h1>
