add navigation buttons and on click events to add and subtract page numbers

--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
         <div class="col-md-9 col-sm-12 alert alert-info">
           <div id="giphy-view"></div>
           <div id="giphy-display" class="view-container"></div>
-
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-          <script src="assets/js/app.js"></script>
+          <div>
+            <button type="button" class="btn btn-success" id="prev-page">
+              Previous Page
+            </button>
+            <button type="button" class="btn btn-success" id="next-page">
+              Next Page
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -50,5 +55,6 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
